feat(build): derive 1.20.1 from 1.21.1 via preprocessor chain
Fold the legacy 1.20.1 branch into the single-branch layout. 1.20.1
predates the 1.20.5 payload rework and 1.20.2 ChunkTrackingView, so the
parallel implementations live behind MC<12005 / MC<12002 blocks:

- channel-based Fabric networking (CHANNEL + write/read) instead of
  CustomPacketPayload/StreamCodec; runtime vanilla-packet enumeration
  from ConnectionProtocol.PLAY instead of the VANILLA_PATHS table
- PENDING handshake state: server buffers aggregation and parks chunk
  sends (PendingChunkQueue) until NebAck, with a 5s demote timeout;
  bloom-filter manifest is split into 30KB chunks (32767-byte C2S limit)
- aggregate payloads over the vanilla size limits are recursively split
  (sendBatched), which requires stateless zstd compression on 1.20.1
- DCC without ChunkTrackingView: per-player center/view tracking plus
  region tickets injected at ChunkMap.move; PCC hooks
  ChunkMap.playerLoadedChunk instead of PlayerChunkSender
- PLAY-phase detection via listener interfaces (survives intermediary
  remapping, unlike the legacy branch's class-name string check)
- Java 17 target: pattern switch and List.getLast() replaced with
  equivalents shared by all versions

Verified: all 7 versions compile and build jars; 1.20.1 dedicated-server
smoke boot passes (mixins apply, NEB initializes).